objects/Community_Tab_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Enabled_Permission_Sets__c</fullName>
        <label>Enabled Permission Sets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Enabled_Profiles__c</fullName>
        <label>Enabled Profiles</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Tab__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Tab</label>
        <referenceTo>Community_Tab_Configuration__c</referenceTo>
        <relationshipLabel>Community Tab Configurations</relationshipLabel>
        <relationshipName>Community_Tab_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SObject_Name__c</fullName>
        <description>Contains the sobject name represented by the tab (not required for VF pages)</description>
        <inlineHelpText>Contains the sobject name represented by the tab (not required for VF pages)</inlineHelpText>
        <label>SObject Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>View_Order__c</fullName>
        <label>View Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Community Tab Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Enabled_Permission_Sets__c</columns>
        <columns>Enabled_Profiles__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Community Tab Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Tab Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>